--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "angular": "^1.4.1",
+    "angular-bootstrap": "^0.12.0",
     "angular-ui-router": "^0.2.15",
     "async": "^1.2.1",
     "babel": "^5.5.6",
     "bluebird": "^2.9.27",
     "body-parser": "^1.12.4",
     "bootstrap": "^3.3.5",
+    "bootstrap-select": "^1.7.3",
     "chalk": "^1.0.0",
     "cheerio": "^0.19.0",
     "d3": "^3.5.5",
